@@ -14,6 +14,7 @@
     <extension point="xbmc.addon.metadata">
         <news>
 [fix] playback failing
+[fix] viewing comments when logged in
         </news>
         <assets>
             <icon>icon.png</icon>
